--- a/css/xposed.css
+++ b/css/xposed.css
@@ -117,3 +117,86 @@ body {
 	color:black;
 	font-weight:bolder;
 }
+
+.appear {
+	visibility: hidden;
+	opacity: 0;
+}
+
+.present .appear {
+	visibility: visible;
+
+	-webkit-transition: opacity 1s 4s;
+	-moz-transition:    opacity 1s 4s;
+	-ms-transition:     opacity 1s 4s;
+	-o-transition:      opacity 1s 4s;
+	transition:         opacity 1s 4s; 
+
+	opacity: 1;
+}
+
+
+.three {
+	text-align: center;
+}
+
+.x,.xp,.xpo,.xpos,.xpose,.xposed {
+opacity:.1;
+font-size:15em;
+color:white;
+-webkit-transition: 0.4s;
+-moz-transition:    0.2s;
+-ms-transition:     0.2s;
+-o-transition:      0.2s;
+transition:         0.4s;
+}
+.present .x{
+opacity:1;
+color:#1976D2;
+}
+.present .xp{
+opacity:1;
+color:#1976D2;
+-webkit-transition-delay: 0.2s;
+-moz-transition-delay:    0.2s;
+-ms-transition-delay:     0.2s;
+-o-transition-delay:      0.2s;
+transition-delay:         0.2s;
+}
+.present .xpo{
+opacity:1;
+color:#1976D2;
+-webkit-transition-delay: 0.4s;
+-moz-transition-delay:    0.4s;
+-ms-transition-delay:     0.4s;
+-o-transition-delay:      0.4s;
+transition-delay:         0.4s;
+}
+.present .xpos{
+color:#1976D2;
+opacity:1;
+
+-webkit-transition-delay: 0.6s;
+-moz-transition-delay:    0.6s;
+-ms-transition-delay:     0.6s;
+-o-transition-delay:      0.6s;
+transition-delay:         0.6s;
+}
+.present .xpose{
+color:#1976D2;
+opacity:1;
+-webkit-transition-delay: 0.8s;
+-moz-transition-delay:    0.8s;
+-ms-transition-delay:     0.8s;
+-o-transition-delay:      0.8s;
+transition-delay:         0.8s;
+}
+.present .xposed{
+color:#1976D2;
+opacity:1;
+-webkit-transition-delay: 1s;
+-moz-transition-delay:    1s;
+-ms-transition-delay:     1s;
+-o-transition-delay:      1s;
+transition-delay:         1s;
+}
