--- a/css/xposed.css
+++ b/css/xposed.css
@@ -100,7 +100,7 @@ body {
 }
 
 .two {
-	font-size: 5em;
+	font-size: 4em;
 	text-align:center;
 }
 
@@ -141,62 +141,105 @@ body {
 }
 
 .x,.xp,.xpo,.xpos,.xpose,.xposed {
-opacity:.1;
-font-size:15em;
-color:white;
--webkit-transition: 0.4s;
--moz-transition:    0.2s;
--ms-transition:     0.2s;
--o-transition:      0.2s;
-transition:         0.4s;
+	opacity:.1;
+	font-size:15em;
+	color:white;
+	-webkit-transition: 0.4s;
+	-moz-transition:    0.2s;
+	-ms-transition:     0.2s;
+	-o-transition:      0.2s;
+	transition:         0.4s;
 }
 .present .x{
-opacity:1;
-color:#1976D2;
+	opacity:1;
+	color:#1976D2;
 }
 .present .xp{
-opacity:1;
-color:#1976D2;
--webkit-transition-delay: 0.2s;
--moz-transition-delay:    0.2s;
--ms-transition-delay:     0.2s;
--o-transition-delay:      0.2s;
-transition-delay:         0.2s;
+	opacity:1;
+	color:#1976D2;
+	-webkit-transition-delay: 0.2s;
+	-moz-transition-delay:    0.2s;
+	-ms-transition-delay:     0.2s;
+	-o-transition-delay:      0.2s;
+	transition-delay:         0.2s;
 }
 .present .xpo{
-opacity:1;
-color:#1976D2;
--webkit-transition-delay: 0.4s;
--moz-transition-delay:    0.4s;
--ms-transition-delay:     0.4s;
--o-transition-delay:      0.4s;
-transition-delay:         0.4s;
+	opacity:1;
+	color:#1976D2;
+	-webkit-transition-delay: 0.4s;
+	-moz-transition-delay:    0.4s;
+	-ms-transition-delay:     0.4s;
+	-o-transition-delay:      0.4s;
+	transition-delay:         0.4s;
 }
 .present .xpos{
-color:#1976D2;
-opacity:1;
-
--webkit-transition-delay: 0.6s;
--moz-transition-delay:    0.6s;
--ms-transition-delay:     0.6s;
--o-transition-delay:      0.6s;
-transition-delay:         0.6s;
+	color:#1976D2;
+	opacity:1;
+	-webkit-transition-delay: 0.6s;
+	-moz-transition-delay:    0.6s;
+	-ms-transition-delay:     0.6s;
+	-o-transition-delay:      0.6s;
+	transition-delay:         0.6s;
 }
 .present .xpose{
-color:#1976D2;
-opacity:1;
--webkit-transition-delay: 0.8s;
--moz-transition-delay:    0.8s;
--ms-transition-delay:     0.8s;
--o-transition-delay:      0.8s;
-transition-delay:         0.8s;
+	color:#1976D2;
+	opacity:1;
+	-webkit-transition-delay: 0.8s;
+	-moz-transition-delay:    0.8s;
+	-ms-transition-delay:     0.8s;
+	-o-transition-delay:      0.8s;
+	transition-delay:         0.8s;
 }
 .present .xposed{
-color:#1976D2;
-opacity:1;
--webkit-transition-delay: 1s;
--moz-transition-delay:    1s;
--ms-transition-delay:     1s;
--o-transition-delay:      1s;
-transition-delay:         1s;
+	color:#1976D2;
+	opacity:1;
+	-webkit-transition-delay: 1s;
+	-moz-transition-delay:    1s;
+	-ms-transition-delay:     1s;
+	-o-transition-delay:      1s;
+	transition-delay:         1s;
+}
+
+.four {
+	font-size: 2.5em;
+}
+
+.five {
+	font-size: 2.5em;
+}
+
+.six {
+	font-size: 2.5em;
+}
+
+.seven {
+	font-size: 2.5em;
+}
+
+.eight {
+	font-size: 2.5em;
+}
+
+.nine {
+	font-size: 2.5em;
+}
+
+.ten {
+	font-size: 2.5em;
+}
+
+.eleven {
+	font-size: 2.5em;
+}
+
+.questions {
+	display: block; 
+	margin: 0 auto;
+
+	-moz-border-radius: 20px;
+ 	-webkit-border-radius: 20px;
+  	-o-border-radius: 20px;
+  	-ms-border-radius: 20px;
+  	-khtml-border-radius: 20px;
+  	border-radius: 20px;
 }
